fixed z-index of team page shapes

--- a/public/css/ourTeam.css
+++ b/public/css/ourTeam.css
@@ -23,11 +23,11 @@ html {
 
 .pbg {
     position: fixed;
-    z-index: 0;
     filter:url(#round);
     transform: scale(0.9, 0.9);
     top: 15%;
     left: 5%;
+    z-index: 0;
 }
 
 #rectangle1 {
@@ -55,7 +55,6 @@ width: 35px;
 height: 185px;
 left: 500px;
 top: 90px;
-
 transform: rotate(10.49deg);
 }
 
@@ -65,8 +64,7 @@ width: 115px;
 height: 160px;
 left: 1100px;
 top: 85px;
-
-transform: matrix(-0.64, 0.77, 0.77, 0.64, 0, 0);
+transform: matrix(-0.64, 0.77, 0.77, 0.64, 0, 0) scale(0.8, 0.8);
 border-radius: 50%;
 }
 
@@ -77,8 +75,7 @@ height: 170px;
 left: 160px;
 top: 100px;
 border-radius: 50%;
-
-transform: matrix(-1, 0, 0, 1, 0, 0);
+transform: matrix(-1, 0, 0, 1, 0, 0) scale(0.8, 0.8);
 }
 
 #triangle3 {
@@ -92,11 +89,7 @@ transform: rotate(-123.58deg);
 }
 
 .bgshapes {
-    background: linear-gradient(180deg, #22FAB0 0%, #1FD1F9 100%);
-}
-
-.bgshapes2 {
-    background: linear-gradient(180deg, #B621FE 0%, #1FD1F9 100%);
+    background: linear-gradient(180deg, rgba(34, 250, 176, 0.65) 0%, rgba(31, 209, 249, 0.65) 100%);
 }
 
 @media (max-width:400px) {
@@ -156,6 +149,7 @@ transform: rotate(-123.58deg);
 .developer p {
     text-align: center;
     font-size: 3rem;
+    z-index: 2;
 }
 
 .Patron .patroncard,
@@ -163,6 +157,7 @@ transform: rotate(-123.58deg);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    z-index: 2;
 }
 
 .ourTeam img {
@@ -204,6 +199,7 @@ transform: rotate(-123.58deg);
     font-weight: normal;
     padding-top: 2rem;
     text-align: center;
+    z-index: 130;
 }
 
 .social-icons svg {
@@ -223,7 +219,6 @@ transform: rotate(-123.58deg);
     transition: 0.2s;
     flex-direction: column;
     right: -4.5rem;
-    z-index: 130;
 }
 
 .ourTeam figure {
@@ -234,8 +229,8 @@ transform: rotate(-123.58deg);
 }
 
 .ourTeam figure:hover img {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
+    -webkit-filter: grayscale(30%);
+    filter: grayscale(30%);
 }
 
 .ourTeam .social-icons:hover {
